--- a/about.html
+++ b/about.html
@@ -37,9 +37,9 @@
                 </div>
                 <div class="topnav-left">
                     <ul>
-                        <li><a href="#">Our Collection</a></li>
+                        <li><a href="/index.html">Our Collection</a></li>
                         <li><a href="/journal.html">Journal</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="mailto:info@taramis.net" target="_blank">Contact</a></li>
                         <li><a href="/about.html">About</a></li>
                     </ul>
                 </div>
@@ -47,9 +47,9 @@
                     <p>Taramis Interiors</p>
                     <br />
                     <div class="desc">
-                        Online gallery for vintage design furniture based in Berlin.
-                        info@taramis.net
-                    </div>
+              Online Gallery for vintage design furniture and decorative objects.
+              <a href="mailto:info@taramis.net" target="_blank">info@taramis.net</a>
+            </div>
 
                     <p></p>
                 </div>
@@ -81,7 +81,7 @@
     <div class="about">
         
         <div class="about-left">
-        <img src="assets/about.jpg" alt="">
+        <img src="/assets/about.jpg" alt="">
     </div>
     
     <div class="about-right">
@@ -114,9 +114,9 @@
         </h4>
         <br />
         <p>
-            Taramis Interiors © Copyright 2001 <br />
-            Contact us info@taramis.net
-        </p>
+        Taramis Interiors © Copyright 2021 <br />
+        Contact us <a href="mailto:info@taramis.net" target="_blank">info@taramis.net</a>
+      </p>
     </footer>
 
     <script src="script.js"></script>
