--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="top">
         <div class="logo">
           <a href="/index.html"
-            ><img src="assets/taramis-logo.jpg" alt=""
+            ><img src="/assets/taramis-logo.jpg" alt=""
           /></a>
         </div>
         <div class="button-open" id="button-open" onclick="openNav()">
@@ -45,9 +45,9 @@
           </div>
           <div class="topnav-left">
             <ul>
-              <li><a href="#">Our Collection</a></li>
+              <li><a href="/index.html">Our Collection</a></li>
               <li><a href="/journal.html">Journal</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="mailto:info@taramis.net" target="_blank">Contact</a></li>
               <li><a href="/about.html">About</a></li>
             </ul>
           </div>
@@ -55,8 +55,8 @@
             <p>Taramis Interiors</p>
             <br />
             <div class="desc">
-              Online gallery for vintage design furniture based in Berlin.
-              info@taramis.net
+              Online Gallery for vintage design furniture and decorative objects.
+              <a href="mailto:info@taramis.net" target="_blank">info@taramis.net</a>
             </div>
 
             <p></p>
@@ -67,10 +67,10 @@
       <div class="top-bar">
         <div class="lead">
           <div class="lead-heading">Our Collection</div>
-          <p>Are you looking for something special? <a href="mailto:info@taramis.net">Contact Us</a>  </p>
+          <p>Are you looking for something special? <a href="mailto:info@taramis.net" target="_blank">Contact Us</a>  </p>
         </div>
         <div class="categories">
-        <div id="myBtnContainer">
+        <div id="myBtnContainer" class="myBtnContainer">
           <button class="btn active" onclick="filterSelection('all')"> All</button>
           <button class="btn" onclick="filterSelection('lighting')"> Lighting</button>
           <button class="btn" onclick="filterSelection('seating')"> Seating</button>
@@ -95,7 +95,7 @@
           <div class="product-info">
             <a href="/pages/art-01.html"><div class="p-name">2-Door Sideboard by Willy Rizzo 1970’s</div></a>
             <br />
-            <p>Very nice laminated 2- door 1973 sideboard by WIlly Rizzo. Sideboard in glossy black melamine lacquered, two chrome metal angles on the front corners.
+            <p class="main-desc">Very nice laminated 2- door 1973 sideboard by WIlly Rizzo. Sideboard in glossy black melamine lacquered, two chrome metal angles on the front corners.
             </p>
             <br>
             <p>Price:</p>
@@ -115,7 +115,7 @@
         <div class="product-info">
           <a href="/pages/art-02.html"><div class="p-name">Gaetano Sciolari Chromed brass chandelier</div></a>
           <br />
-          <p>A 9 light chandelier from Sciolari. Chrome plated brass.</p>
+          <p  class="main-desc">A 9 light chandelier from Sciolari. Chrome plated brass.</p>
           <br>
           <p>Price:</p>
           <p>Upon request</p>
@@ -131,10 +131,10 @@
         <a href="/pages/art-03.html"><img src="/products/art-03/art-03_1.jpg" alt="" /></a>
       </div>
       <div class="product-info">
-        <a href="/pages/art-03.html"><div class="p-name">Large curved Coma sofa
+        <a href="/pages/art-03.html"><div class="p-name">Large curved Coma sofa 1950’s
         </div></a>
         <br />
-        <p>A large Italian curved sofa in the style of Ice Parisi on brass feet, blue velvet. 1970’s
+        <p class="main-desc">A large Italian curved sofa in the style of Ico Parisi on brass feet, blue velvet. 1970’s
         </p>
         <br>
         <p>Price:</p>
@@ -154,7 +154,7 @@
       <a href="/pages/art-04.html"><div class="p-name">Large Italian vintage smoked glass and chrome dining table 1970’s
       </div></a>
       <br />
-      <p>Very large 1970’s Italian dining table with a sculptural base an smoked glass top
+      <p class="main-desc">Very large 1970’s Italian dining table with a sculptural base an smoked glass top
       </p>
       <br>
       <p>Price:</p>
@@ -174,7 +174,7 @@
       <a href="/pages/art-05.html"><div class="p-name">Large Murano Glass Vase by Cenedese - Clear
       </div></a>
       <br />
-      <p>Spectacular free form clear Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made. Very rare and as decorative as a sculpture.
+      <p class="main-desc">Spectacular free form clear Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made. Very rare and as decorative as a sculpture.
       </p>
       <br>
       <p>Price:</p>
@@ -194,7 +194,7 @@
       <a href="/pages/art-06.html"><div class="p-name">Large Murano Glass Vase by Cenedese - Emerald
       </div></a>
       <br />
-      <p>Spectacular free form emerald Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made.
+      <p class="main-desc">Spectacular free form emerald Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made.
       </p>
       <br>
       <p>Price:</p>
@@ -215,7 +215,7 @@
 
       </div></a>
       <br />
-      <p>Round dining table designed by Luigi Saccardo for Maison Jansen- Armet, France/Italy 1970’s The table features a thick glass top.
+      <p class="main-desc">Round dining table designed by Luigi Saccardo for Maison Jansen- Armet, France/Italy 1970’s The table features a thick glass top.
       </p>
       <br>
       <p>Price:</p>
@@ -232,10 +232,10 @@
       <a href="/pages/art-08.html"><img src="/products/art-08/art-08_1.jpg" alt="" /></a>
     </div>
     <div class="product-info">
-      <a href="/pages/art-08.html"><div class="p-name">Maison Jansen Pal Tree Floor Lamp 1970’s
+      <a href="/pages/art-08.html"><div class="p-name">Maison Jansen Palm Tree Floor Lamp 1970’s
       </div></a>
       <br />
-      <p>Highly decorative Maison Jansen palm tree floor lamp. Torch cut patinated brass trunk an leaves coming out of the laminated base.
+      <p class="main-desc">Highly decorative Maison Jansen palm tree floor lamp. Torch cut patinated brass trunk an leaves coming out of the laminated base.
       </p>
       <br>
       <p>Price:</p>
@@ -252,10 +252,10 @@
       <a href="/pages/art-09.html"><img src="/products/art-09/art-09_1.jpg" alt="" /></a>
     </div>
     <div class="product-info">
-      <a href="/pages/art-09.html"><div class="p-name">Mid Century 1950’s Italian Armchairs
+      <a href="/pages/art-09.html"><div class="p-name">Mid Century Italian Armchairs
       </div></a>
       <br />
-      <p>Italian armchair in the style of Marco Zanuso upholstered in new textile. Brass legs
+      <p class="main-desc">Italian armchair in the style of Marco Zanuso upholstered in new textile. Brass legs
       </p>
       <br>
       <p>Price:</p>
@@ -275,7 +275,7 @@
       <a href="/pages/art-10.html"><div class="p-name">A pair of 1970’s table lamp brass frame and opal glass shade
       </div></a>
       <br />
-      <p> Exquisite pair of large modernist table lamps realised in Murano, Italy. Brass and translucent handblown Murano glass embellishments
+      <p class="main-desc"> Exquisite pair of large modernist table lamps realised in Murano, Italy. Brass and translucent handblown Murano glass embellishments
       </p>
       <br>
       <p>Price:</p>
@@ -295,7 +295,7 @@
       <a href="/pages/art-11.html"><div class="p-name">Paul Evans side table 
       </div></a>
       <br />
-      <p>Paul Evans Cityscape steel table. Fine example of Paul Evans’ later more polished work who is renown for his brutalist creations.
+      <p class="main-desc">Paul Evans Cityscape steel table. Fine example of Paul Evans’ later more polished work who is renown for his brutalist creations.
       </p>
       <br>
       <p>Price:</p>
@@ -316,7 +316,7 @@
 
       </div></a>
       <br />
-      <p>Fabulous copper and brass Elm Trees Wall sculpture made in California in the 1970’s. Highly decorative and collectable
+      <p class="main-desc">Fabulous copper and brass Elm Trees Wall sculpture made in California in the 1970’s. Highly decorative and collectable
       </p>
       <br>
       <p>Price:</p>
@@ -336,7 +336,7 @@
       <a href="/pages/art-13.html"><div class="p-name">1980’s Small Modular Sofa
       </div></a>
       <br />
-      <p>Small 1980’s modular sofa reupholstered in blue velvet.
+      <p class="main-desc">Small 1980’s modular sofa reupholstered in blue velvet.
       </p>
       <br>
       <p>Price:</p>
@@ -356,7 +356,7 @@
       <a href="/pages/art-14.html"><div class="p-name">Tobia & Afra Scarpa 8 Monk Chairs set, 1974
       </div></a>
       <br />
-      <p>Black leather seat and rest chairs with walnut legs, 8 available
+      <p class="main-desc">Black leather seat and rest chairs with walnut legs, 8 available
       </p>
       <br>
       <p>Price:</p>
@@ -376,7 +376,7 @@
       <a href="/pages/art-15.html"><div class="p-name">Very large Brutalist sculpture
       </div></a>
       <br />
-      <p>Very large wall sculpture from ex Yugoslavia, circa 1970s. Mixed media: iron, wood and aluminium foil. Not heavy. Unique, one of a kind. 
+      <p class="main-desc">Very large wall sculpture from ex Yugoslavia, circa 1970s. Mixed media: iron, wood and aluminium foil. Not heavy. Unique, one of a kind. 
       </p>
       <br>
       <p>Price:</p>
@@ -386,7 +386,7 @@
 </a>
 </div>
 
-<div class="filterDiv seating">
+<div class="filterDiv seating archive">
   <a href="/pages/art-16.html">
   <div class="product" data-aos="zoom-in" data-aos-delay="120">
     <div class="product-img">
@@ -396,7 +396,7 @@
       <a href="/pages/art-16.html"><div class="p-name">Very large Modular 1970’s Sofa (2 pieces)
       </div></a>
       <br />
-      <p>Beautiful 1970’s Modular sofa reupholstered in cream velvet. Very high quality!It consists of two elements ( each 340 cm long) that can be arrange as desired.
+      <p class="main-desc">Beautiful 1970’s Modular sofa reupholstered in cream velvet. Very high quality!It consists of two elements ( each 340 cm long) that can be arrange as desired.
       </p>
       <br>
       <p>Price:</p>
@@ -414,11 +414,11 @@
       <a href="/pages/art-17.html"><img src="/products/art-17/art-17_1.jpg" alt="" /></a>
     </div>
     <div class="product-info">
-      <a href="/pages/art-17.html"><div class="p-name">Vintage Coffee/Bar Table by Willy Rizzo - Chocolate Brown
+      <a href="/pages/art-17.html"><div class="p-name">1970's Vintage Coffee/Bar Table by Willy Rizzo - Chocolate Brown
 
       </div></a>
       <br />
-      <p>Elegant and hard to find chocolate brown coffee cocktail table by Willy Rizzo. Lacquered wood with parts and details in polish steel. 
+      <p class="main-desc">Elegant and hard to find chocolate brown coffee cocktail table by Willy Rizzo. Lacquered wood with parts and details in polish steel. 
 
       </p>
       <br>
@@ -438,12 +438,31 @@
     <div class="product-info">
       <a href="/pages/art-18.html"><div class="p-name">Warren Platner Armchair      </div></a>
       <br />
-      <p>Original plum velvet upholstery on curved steel rods. Designed in 1966 and produced in 1970. 
+      <p class="main-desc">Original plum velvet upholstery on curved steel rods. Designed in 1966 and produced in 1970. 
 
       </p>
       <br>
       <p>Price:</p>
-      <p>Upon request</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating archive">
+  <a href="/pages/art-19.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-19.html"><img src="/products/art-19/art-19_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-19.html"><div class="p-name">1970's Vintage Coffee/Bar Table by Willy Rizzo - Red</div></a>
+      <br />
+      <p class="main-desc">Very elegant coffee table in bordeaux red lacquered wood and finishes in chrome plated metal. A stainless steel container in the centre serves as a bottle holder. 
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
     </div>
   </div>
 </a>
@@ -460,7 +479,7 @@
 
       </div></a>
       <br />
-      <p>Hans Kögl  1970’s  Holywood Regency style. Beautiful floor lamp gilt metal stems and leafs holing 5 light bulbs. Decorated with 10 white enamel flowers.
+      <p class="main-desc">Hans Kögl  1970’s  Holywood Regency style. Beautiful floor lamp gilt metal stems and leafs holing 5 light bulbs. Decorated with 10 white enamel flowers.
 
       </p>
       <br>
@@ -482,7 +501,7 @@
 
       </div></a>
       <br />
-      <p>1980’s Italian vintage Venini Murano chandelier, 48 large glass tubes in star shape, beautiful colours amber, opal silk baby blue and transparent.
+      <p class="main-desc">1980’s Italian vintage Venini Murano chandelier, 48 large glass tubes in star shape, beautiful colours amber, opal silk baby blue and transparent.
 
       </p>
       <br>
@@ -503,7 +522,7 @@
       <a href="/pages/art-22.html"><div class="p-name"> 1970’s Willy Rizzo Sliding Bar low table
       </div></a>
       <br />
-      <p>Polished aluminium with two tinted mirror sliding surfaces. Internal storage finished in mirror. Perspex bottle holder. Black laminate plinth.
+      <p class="main-desc">Polished aluminium with two tinted mirror sliding surfaces. Internal storage finished in mirror. Perspex bottle holder. Black laminate plinth.
       </p>
       <br>
       <p>Price:</p>
@@ -523,7 +542,7 @@
       <a href="/pages/art-23.html"><div class="p-name">Italian Vintage Glass And Chrome Dining Table 1970’s
       </div></a>
       <br />
-      <p>An oval 1970’s Italian glass and chrome dining table. 
+      <p class="main-desc">An oval 1970’s Italian glass and chrome dining table. 
       </p>
       <br>
       <p>Price:</p>
@@ -545,7 +564,7 @@
 
       </div></a>
       <br />
-      <p>Stunning table or floor lamp consisting of hand blown Murano glass multicolour decorations mounted on a brass base. 
+      <p class="main-desc">Stunning table or floor lamp consisting of hand blown Murano glass multicolour decorations mounted on a brass base. 
       </p>
       <br>
       <p>Price:</p>
@@ -565,7 +584,7 @@
       <a href="/pages/art-25.html"><div class="p-name">French Vintage Brass Side Tables 1970’s
       </div></a>
       <br />
-      <p>Two very nice brass side tables. Comes with clear glass tops. France 1970’s
+      <p class="main-desc">Two very nice brass side tables. Comes with clear glass tops. France 1970’s
       </p>
       <br>
       <p>Price:</p>
@@ -585,7 +604,27 @@
       <a href="/pages/art-26.html"><div class="p-name">Constantini Murano Glass Vases With Spikes
       </div></a>
       <br />
-      <p>A spectacular pair of Venetian vases, imposing in size in clear blown Murano glass, hand decorated with the technique rostrato; spikes of glass individually pulled in relief.
+      <p class="main-desc">A spectacular pair of Venetian vases, imposing in size in clear blown Murano glass, hand decorated with the technique rostrato; spikes of glass individually pulled in relief.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other">
+  <a href="/pages/art-27.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="123">
+    <div class="product-img">
+      <a href="/pages/art-27.html"><img src="/products/art-27/art-27_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-27.html"><div class="p-name">Danka Dimitrijevic Revolutionary Song Sculpture Pianting
+      </div></a>
+      <br />
+      <p class="main-desc">Sculpture - pianting, combined technique
       </p>
       <br>
       <p>Price:</p>
@@ -598,9 +637,8 @@
 
     </div>
 
+   <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/947a05325510547cab2dc51326480fb1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 
-
-<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/947a05325510547cab2dc51326480fb1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
     
     <footer>
       <h4 class="footer">
@@ -609,8 +647,8 @@
       </h4>
       <br />
       <p>
-        Taramis Interiors © Copyright 2001 <br />
-        Contact us info@taramis.net
+        Taramis Interiors © Copyright 2021 <br />
+        Contact us <a href="mailto:info@taramis.net" target="_blank">info@taramis.net</a>
       </p>
     </footer>
 
